# zijinhuatekla

./: .gitignore  AGENTS.md  README.md  STATUS.md  TASKLIST.md  pyproject.toml
cases/: seed.json
docs/design/: 2026-06-17-agent-architecture-skeleton.md  2026-06-17-algorithm-extraction-governance.md  2026-06-17-t3-recognition-core.md  2026-06-23-main-material-segment-export-contract.md
docs/verification/: 2026-06-17-adapter-layer.md  2026-06-17-algorithm-extraction-core.md  2026-06-17-casebank-persistence.md  2026-06-17-classifiers-facade.md  2026-06-17-offline-pipeline.md  2026-06-17-quality-issues-report.md  2026-06-17-reports-layer.md  2026-06-17-spatial-candidate-partids.md  2026-06-17-spatial-candidate-report.md  2026-06-17-spatial-feature-adapter.md  2026-06-17-spatial-pipeline.md  2026-06-17-t3-recognition-core.md  2026-06-18-conflict-candidates-report.md  2026-06-18-manufacturing-scope-report.md  2026-06-18-missing-candidate-search.md  2026-06-18-missing-candidates-report.md  (+29 more)
tests/: test_adapters_offline.py  test_algorithm_interfaces.py  test_architecture_skeleton.py  test_box_main_material_segments.py  test_box_part_spatial_relations.py  test_box_section_evidence.py  test_box_station_topology_diagnostics.py  test_casebank_persistence.py  test_classifiers_facade.py  test_feature_snapshot.py  test_h_beam_part_sides.py  test_main_material_segments.py  test_manufacturing_scope.py  test_pipeline_offline.py  test_quality_candidate_search.py  test_quality_review.py  test_reports_offline.py  test_rules.py  test_s1_new.py  test_spatial_features.py
(+43 files in other folders)
